Fix dependency conflicts and update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-fastapi
-uvicorn
-celery
-redis
-requests
-langchain
-pydantic
-python-dotenv
-pytest
-pytest-mock
-fastapi
-uvicorn
+fastapi==0.95.2
+uvicorn==0.22.0
+celery==5.4.0
+redis==5.2.0
+aioredis==2.0.1
+requests==2.32.0
+python-dotenv==1.0.0
+langchain==0.0.208
+pydantic<2
+pytest==7.4.0
+pytest-mock==3.10.0
+kombu>=5.3.4,<6.0.0
